syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "playground/driver/grpc/gen";

// clang-format off
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "Playground API";
        version: "0.1";
        contact: {
            name: "gleamsoda";
            url: "https://github.com/gleamsoda";
            email: "gleamsoda99@gmail.com";
        };
    };
};
// clang-format on

service Playground {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
            post: "/v1/create_user"
            body: "*"
        };
        // option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
        // 	description: "Use this API to create a new user";
        // 	summary: "Create new user";
        // };
    }
    rpc LoginUser(LoginUserRequest) returns (LoginUserResponse) {
        option (google.api.http) = {
            post: "/v1/login_user"
            body: "*"
        };
        // option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
        // 	description: "Use this API to login user and get access token & refresh token";
        // 	summary: "Login user";
        // };
    }
}

message CreateUserRequest {
    string username = 1;
    string full_name = 2;
    string email = 3;
    string password = 4;
}

message CreateUserResponse {
    User user = 1;
}

message LoginUserRequest {
    string username = 1;
    string password = 2;
}

message LoginUserResponse {
    User user = 1;
    string session_id = 2;
    string access_token = 3;
    string refresh_token = 4;
    google.protobuf.Timestamp access_token_expires_at = 5;
    google.protobuf.Timestamp refresh_token_expires_at = 6;
}

message User {
    string username = 1;
    string full_name = 2;
    string email = 3;
    google.protobuf.Timestamp created_at = 4;
}